@@ -127,7 +127,7 @@ public class RangeAssignor extends AbstractPartitionAssignor {
         List<TopicAssignmentState> topicAssignmentStates = partitionsPerTopic.entrySet().stream()
                 .filter(e -> !e.getValue().isEmpty())
                 .map(e -> new TopicAssignmentState(e.getKey(), e.getValue(), consumersPerTopic.get(e.getKey()), consumerRacks))
-                .toList();
+                .collect(Collectors.toList());
 
         Map<String, List<TopicPartition>> assignment = new HashMap<>();
         subscriptions.keySet().forEach(memberId -> assignment.put(memberId, new ArrayList<>()));
